Fixes spacing on title/headers

--- a/stylesheets/ruby-strftime-reference.less
+++ b/stylesheets/ruby-strftime-reference.less
@@ -2,17 +2,17 @@
 
 .ruby-strftime-reference {
   font-size: 12px;
-  max-height: 300px;
+  max-height: 500px;
   overflow: scroll;
   h1 {
     font-size: 14px;
     text-align: center;
-    margin-top: 8px;
+    margin: 0;
   }
   h2 {
     font-size: 13px;
     text-align: center;
-    margin: 0 0 5px;
+    margin: 10px 0 5px;
     color: lighten(@text-color, 15%);
   }
   table {
